# scribeforge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: prompt.example.md  sources.example.txt
scribeforge/: __init__.py  asr.py  cli.py  fetch.py  pdf.py  polish.py  sources.py
tests/: test_loop_detect.py
